--- a/ProjectOne/ProjectOne/Views/Shared/_Layout.cshtml
+++ b/ProjectOne/ProjectOne/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Create">Sign in/ Sign up</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Sample">Sample</a>
+                        </li>
                     </ul>
                 </div>
             </div>
