--- a/ProjectOne/ProjectOne/Views/Customer/Create.cshtml
+++ b/ProjectOne/ProjectOne/Views/Customer/Create.cshtml
@@ -15,17 +15,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                     <label asp-for="FirstName" class="control-label"></label>
-                    <input asp-for="FirstName" class="form-control" name="firstName" />
+                    <input asp-for="FirstName" class="form-control" name="firstName"/>
                     <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                     <label asp-for="LastName" class="control-label"></label>
-                    <input asp-for="LastName" class="form-control" name="lastName" />
+                    <input asp-for="LastName" class="form-control"  name="lastName"/>
                     <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CustomerPassword" class="control-label"></label>
-                <input asp-for="CustomerPassword" class="form-control" />
+                <input asp-for="CustomerPassword" class="form-control" type="password"  name="password"/>
                 <span asp-validation-for="CustomerPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -37,7 +37,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="OrderHeader" asp-action="Index">
+        <form asp-controller="OrderHeader" asp-action="CreateNew">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
@@ -51,8 +51,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="CustomerPassword" class="control-label"></label>
-                <input asp-for="CustomerPassword" class="form-control" />
+                <input asp-for="CustomerPassword" class="form-control" type="password" />
                 <span asp-validation-for="CustomerPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ConfirmPassword" class="control-label"></label>
+                <input asp-for="ConfirmPassword" class="form-control" type="password" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create New Account" class="btn btn-primary" />
@@ -62,8 +67,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
-    <a asp-action="Index">New User? Create an account!</a>
+    <a asp-controller="Home" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
