--- a/ProjectOne/ProjectOne/Views/Customer/Details.cshtml
+++ b/ProjectOne/ProjectOne/Views/Customer/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjectOne.Models.Inventory
+﻿@model ProjectOne.Models.Customer
 
 @{
     ViewData["Title"] = "Details";
@@ -7,12 +7,36 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Inventory</h4>
+    <h4>Customer</h4>
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CustomerID)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerPassword)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CustomerPassword)
+        </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Resubmit", "Resubmit", new { id = Model.CustomerID }) |
     <a asp-action="Index">Back to List</a>
 </div>
