--- a/ProjectOne/ProjectOne/Views/OrderHeader/Edit.cshtml
+++ b/ProjectOne/ProjectOne/Views/OrderHeader/Edit.cshtml
@@ -1,44 +1,39 @@
 ﻿@model ProjectOne.Models.OrderHeader
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>OrderHeader</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="OrderID" class="control-label"></label>
-                <input asp-for="OrderID" class="form-control" readonly />
+                <input asp-for="OrderID" class="form-control" />
                 <span asp-validation-for="OrderID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="StoreID" class="control-label"></label>
                 <input asp-for="StoreID" class="form-control" />
                 <span asp-validation-for="StoreID" class="text-danger"></span>
-                @* figure out how to arrange the fourth parameter....*@
             </div>
             <div class="form-group">
                 <label asp-for="AddressID" class="control-label"></label>
                 <input asp-for="AddressID" class="form-control" />
                 <span asp-validation-for="AddressID" class="text-danger"></span>
-                @* figure out how to arrange the fourth parameter....*@
-                @*@Html.ActionLink("Change Store", "Index", "Address", new { id = Model.OrderID }, null)*@
             </div>
             <div class="form-group">
                 <label asp-for="TotalCost" class="control-label"></label>
                 <input asp-for="TotalCost" class="form-control" />
                 <span asp-validation-for="TotalCost" class="text-danger"></span>
-                @* figure out how to arrange the fourth parameter....*@
-                @* @Html.ActionLink("Change Store", "Index", "Product", new { id = Model.OrderID }, null) *@
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -48,6 +43,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
