--- a/ProjectOne/ProjectOne/Views/OrderHeader/IndexNew.cshtml
+++ b/ProjectOne/ProjectOne/Views/OrderHeader/IndexNew.cshtml
@@ -1,17 +1,13 @@
 ﻿@model IEnumerable<ProjectOne.Models.OrderHeader>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "IndexNew";
 }
 
-<h1>Welcome</h1>
+<h1>IndexNew</h1>
 
 <p>
-    What do you want to do?
-    <br />
-    <a asp-controller="Product" asp-action="Index">Place a new order</a> |
-    <a asp-controller="Address" asp-action="Index">Manage addresses</a> |
-    <a asp-controller="OrderHeader" asp-action="OrderHistory">Look up order history</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -45,6 +41,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TotalCost)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
