--- a/ProjectOne/ProjectOne/Views/OrderHeader/OrderHistory.cshtml
+++ b/ProjectOne/ProjectOne/Views/OrderHeader/OrderHistory.cshtml
@@ -1,17 +1,16 @@
 ﻿@model IEnumerable<ProjectOne.Models.OrderHeader>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "OrderHistory";
 }
 
-<h1>Welcome</h1>
+<h1>OrderHistory</h1>
 
 <p>
-    What do you want to do?
-    <br />
-    <a asp-controller="Product" asp-action="Index">Place a new order</a> |
-    <a asp-controller="Address" asp-action="Index">Manage addresses</a> |
-    <a asp-controller="OrderHeader" asp-action="OrderHistory">Look up order history</a>
+    @Html.ActionLink("Sort By Earliest", "OrderHistory", new { sort = 1 }) |
+    @Html.ActionLink("Sort By Latest", "OrderHistory", new { sort = 2 }) |
+    @Html.ActionLink("Sort By Cheapest", "OrderHistory", new { sort = 3 }) |
+    @Html.ActionLink("Sort By Most Expensive", "OrderHistory", new { sort = 4 })
 </p>
 <table class="table">
     <thead>
@@ -45,6 +44,10 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TotalCost)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "Details", new { id = item.OrderID }) |
+                @Html.ActionLink("Resubmit", "Resubmit", new { id = item.OrderID })
             </td>
         </tr>
 }
