Fixed a bug or two... somewhat functioning

--- a/ProjectOne/ProjectOne/Views/Home/Index.cshtml
+++ b/ProjectOne/ProjectOne/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Ita D'Pizza</h1>
-    <p>Web page coming soon!</p>
+    <img src="logo.jpg" />
+    <p>Please click Sign in/ Sign up to get started!</p>
 </div>
