--- a/ProjectOne/ProjectOne/Views/Customer/Create.cshtml
+++ b/ProjectOne/ProjectOne/Views/Customer/Create.cshtml
@@ -37,7 +37,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="OrderHeader" asp-action="CreateNew">
+        <form asp-controller="OrderHeader" asp-action="Index">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
@@ -51,12 +51,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="CustomerPassword" class="control-label"></label>
-                <input asp-for="CustomerPassword" class="form-control" type="password" />
+                <input asp-for="CustomerPassword" class="form-control" type="password" name="password" />
                 <span asp-validation-for="CustomerPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" type="password" />
+                <input asp-for="ConfirmPassword" class="form-control" type="password" name="confirmpassword" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
