--- a/ProjectOne/ProjectOne/Views/Customer/Index.cshtml
+++ b/ProjectOne/ProjectOne/Views/Customer/Index.cshtml
@@ -37,9 +37,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.CustomerID  }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.CustomerID  }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.CustomerID  })
+                @Html.ActionLink("View Orders", "OrderHistory", "OrderHeader", new {  id=item.CustomerID  }, null)
             </td>
         </tr>
 }
