--- a/ProjectOne/ProjectOne/Views/Shared/_Layout.cshtml
+++ b/ProjectOne/ProjectOne/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Create">Sign in/ Sign up</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">View Customers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
