added photo, started css

--- a/ProjectOne/ProjectOne/Views/Home/Index.cshtml
+++ b/ProjectOne/ProjectOne/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<head>
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+</head>
 <div class="text-center">
     <h1 class="display-4">Ita D'Pizza</h1>
-    <img src="logo.jpg" />
+    <img src="/Images/logo.jpg" alt=""/>
     <p>Please click Sign in/ Sign up to get started!</p>
 </div>
